2025-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/parse.cpp (getArray): Allow for mixed types in array

2025-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.3

2025-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/toml++/impl/path.h: Adjust for new clang++-20 nag
	on 'whitespace in literal operator declaration' deprecation
	* inst/include/toml++/impl/parser.h: Idem

	* .github/workflows/ci.yaml: Use r-ci setup with implicit bootstrap

2024-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-05-26  Walter Somerville  <waltersom@gmail.com>

	* DESCRIPTION (Imports): Updated minimum version of Rcpp

2023-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.2

	* inst/include/toml++/toml.h: New upstream version 3.3.0
	* inst/include/toml++/impl/parser.inl: Idem
	* inst/include/toml++/impl/std_new.h: Idem
	* inst/include/toml++/impl/version.h: Idem
	* inst/include/toml++/impl/preprocessor.h: Idem

2023-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.1

2023-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/toml++/impl/preprocessor.h: Updated upstream version

	* src/Makevars (PKG_CPPFLAGS): Define -DTOML_ENABLE_FLOAT16=0 to
	ensure wider ability to build including arm64 and i386

2023-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.0

	* inst/include/toml++/toml.h: Comment-out diagnostics suppression for
	clang which CRAN Policy frowns upon
	* src/parse.cpp (getValue): Add one explicit cast
	* src/parse.h (collapsedList): Switch one loop variable to R_xlen_t
